# diffcue

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: DiffcueDeps.cmake
openspec/changes/archive/2026-07-06-build-diffcue-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/cli-interface/: spec.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/cross-platform-build/: spec.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/diff-viewer/: spec.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/file-browser-tree/: spec.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/prompt-generation/: spec.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/review-cues/: spec.md
openspec/changes/archive/2026-07-06-build-diffcue-mvp/specs/ui-themes/: spec.md
openspec/changes/archive/2026-07-09-async-refresh/: tasks.md
openspec/changes/archive/2026-07-09-cues-palette-recents/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-cues-palette-recents/specs/command-palette/: spec.md
openspec/changes/archive/2026-07-09-cues-palette-recents/specs/prompt-generation/: spec.md
openspec/changes/archive/2026-07-09-cues-palette-recents/specs/recent-folders/: spec.md
openspec/changes/archive/2026-07-09-cues-palette-recents/specs/review-cues/: spec.md
openspec/changes/archive/2026-07-09-enable-imgui-docking/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-enable-imgui-docking/specs/docking-layout/: spec.md
openspec/changes/archive/2026-07-14-fix-cue-jump-and-enlarge-add-input/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-14-fix-cue-jump-and-enlarge-add-input/specs/review-cues/: spec.md
openspec/changes/async-refresh/: design.md  proposal.md
openspec/changes/async-refresh/specs/async-refresh/: spec.md
openspec/specs/async-refresh/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/command-palette/: spec.md
openspec/specs/cross-platform-build/: spec.md
openspec/specs/diff-viewer/: spec.md
openspec/specs/docking-layout/: spec.md
openspec/specs/file-browser-tree/: spec.md
openspec/specs/prompt-generation/: spec.md
openspec/specs/recent-folders/: spec.md
openspec/specs/review-cues/: spec.md
openspec/specs/ui-themes/: spec.md
src/: main.cpp  version.h.in
src/app/: app.cpp  app.h
src/cli/: args.cpp  args.h
src/git/: git_adapter.cpp  git_adapter.h  git_status.cpp  git_status.h
src/model/: cue_store.cpp  cue_store.h  diff_model.h  file_meta.cpp  file_meta.h  file_tree.cpp  file_tree.h  prefs.cpp  prefs.h  prompt_builder.cpp  prompt_builder.h
src/platform/: clipboard.cpp  clipboard.h  file_dialog.cpp  file_dialog.h  open_url.cpp  open_url.h  paths.cpp  paths.h  subprocess.cpp  subprocess.h  window.cpp  window.h
src/ui/: command_palette.cpp  command_palette.h  diff_viewer_panel.cpp  diff_viewer_panel.h  file_browser_panel.cpp  file_browser_panel.h  find_bar.cpp  find_bar.h  menubar.cpp  menubar.h  prompt_panel.cpp  prompt_panel.h  theme_defs.inc  theme_loader.cpp  theme_loader.h  toolbar_panel.cpp  toolbar_panel.h
tests/: CMakeLists.txt  test_async_refresh.cpp  test_cli_args.cpp  test_cue_store.cpp  test_file_meta.cpp  test_git_adapter.cpp  test_prefs.cpp  test_prompt_builder.cpp  test_subprocess.cpp  test_theme_loader.cpp
